src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Item_Count__c</fullName>
        <label>Item Count</label>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.Full_Name__c</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Emloyee_ID__c</fullName>
        <formula>Owner:User.Alias</formula>
        <label>Owner Emloyee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Owner:User.R90_RegionName__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Friday__c</fullName>
        <label>Total Friday</label>
        <summarizedField>Time_Sheet_Activity__c.Fri__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monday__c</fullName>
        <label>Total Monday</label>
        <summarizedField>Time_Sheet_Activity__c.Mon__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Saturday__c</fullName>
        <label>Total Saturday</label>
        <summarizedField>Time_Sheet_Activity__c.Sat__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sunday__c</fullName>
        <label>Total Sunday</label>
        <summarizedField>Time_Sheet_Activity__c.Sun__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Thursday__c</fullName>
        <label>Total Thursday</label>
        <summarizedField>Time_Sheet_Activity__c.Thur__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tuesday__c</fullName>
        <label>Total Tuesday</label>
        <summarizedField>Time_Sheet_Activity__c.Tue__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Wednesday__c</fullName>
        <label>Total Wednesday</label>
        <summarizedField>Time_Sheet_Activity__c.Wed__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_for_Timesheet__c</fullName>
        <label>Total for Timesheet</label>
        <summarizedField>Time_Sheet_Activity__c.Total_Line_Activity__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Activity__c.Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Commencing__c</fullName>
        <label>Week Commencing</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>CreatedToday</fullName>
        <columns>NAME</columns>
        <columns>Week_Commencing__c</columns>
        <columns>Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Item_Count__c</columns>
        <columns>Manager__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>My_Draft_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Week_Commencing__c</columns>
        <columns>Status__c</columns>
        <columns>Item_Count__c</columns>
        <columns>Total_for_Timesheet__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>My Draft Timesheets</label>
    </listViews>
    <nameField>
        <displayFormat>TS{00000}-{YYYY}</displayFormat>
        <label>Timesheet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>